--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -13,28 +13,25 @@
 - name: Add Docker repository.
   get_url:
     url: "{{ docker_yum_repo_url }}"
-    dest: '/etc/yum.repos.d/docker-{{ docker_edition }}.repo'
+    dest: "/etc/yum.repos.d/docker-{{ docker_edition }}.repo"
     owner: root
     group: root
     mode: 0644
   when: docker_add_repo | bool
 
-- name: Configure Docker Nightly repo.
+- name: Remove Docker Nightly repo.
   ini_file:
-    dest: '/etc/yum.repos.d/docker-{{ docker_edition }}.repo'
-    section: 'docker-{{ docker_edition }}-nightly'
-    option: enabled
-    value: '{{ docker_yum_repo_enable_nightly }}'
-    mode: 0644
-    no_extra_spaces: true
+    dest: "/etc/yum.repos.d/docker-{{ docker_edition }}.repo"
+    section: "docker-{{ docker_edition }}-nightly"
+    state: absent
   when: docker_add_repo | bool
 
 - name: Configure Docker Test repo.
   ini_file:
-    dest: '/etc/yum.repos.d/docker-{{ docker_edition }}.repo'
-    section: 'docker-{{ docker_edition }}-test'
+    dest: "/etc/yum.repos.d/docker-{{ docker_edition }}.repo"
+    section: "docker-{{ docker_edition }}-test"
     option: enabled
-    value: '{{ docker_yum_repo_enable_test }}'
+    value: "{{ docker_yum_repo_enable_test }}"
     mode: 0644
     no_extra_spaces: true
   when: docker_add_repo | bool
